compiler/tests/fail/stack_allocation/x86-64/bad_alignment.jazz
export fn f (reg u64 i) -> reg u32 {
  reg u32 res;
  stack u64[2] a;
  reg ptr u32[3] b;
  a[i]=0;
  b[1:2] = a[:u32 i:2];
  res = b[:u64 1];
  return res;
}
